--- a/src/html/admin/dashboard.html
+++ b/src/html/admin/dashboard.html
@@ -343,14 +343,18 @@
                 <!-- tabs -->
                 <div class="section-content-h2">
                   <button id="dashboard_tab1" class="section-content-tab bg-gray-200 hover:bg-gray-300">
-                    <p>Active Monthly Pass Growth</p>
-                    <p class="text-sm text-gray-500">Monthly pass growth tracker</p>
-                    <i class="fas fa-spinner hidden animate-spin text-gray-400"></i>
+                    <p class="mb-6 text-base">Active Monthly Pass Growth</p>
+                    <div class="absolute inset-0 mt-6 content-center">
+                      <p class="text-xs text-gray-500">Monthly pass growth tracker</p>
+                      <i class="fas fa-spinner hidden animate-spin text-gray-400"></i>
+                    </div>
                   </button>
                   <button id="dashboard_tab2" class="section-content-tab bg-transparent hover:bg-gray-200">
-                    <p>Upcoming Monthly Pass Renewals</p>
-                    <p class="text-sm text-gray-500">Users due for monthly pass renewals</p>
-                    <i class="fas fa-spinner hidden animate-spin text-gray-400"></i>
+                    <p class="mb-6 text-base">Upcoming Monthly Pass Renewals</p>
+                    <div class="absolute inset-0 mt-6 content-center">
+                      <p class="text-xs text-gray-500">Users due for monthly pass renewals</p>
+                      <i class="fas fa-spinner hidden animate-spin text-gray-400"></i>
+                    </div>
 
                     <!-- red dot -->
                     <div class="absolute right-2 top-2 hidden">
@@ -550,9 +554,11 @@
                 <!-- tabs -->
                 <div class="section-content-h2">
                   <button id="checkin_daily_tab1" class="section-content-tab bg-gray-200 hover:bg-gray-300">
-                    <p>Registered Daily Users</p>
-                    <p class="text-sm text-gray-500">Daily users monitoring</p>
-                    <i class="fas fa-spinner hidden animate-spin text-gray-400"></i>
+                    <p class="mb-6 text-base">Registered Daily Users</p>
+                    <div class="absolute inset-0 mt-6 content-center">
+                      <p class="text-xs text-gray-500">Daily users monitoring</p>
+                      <i class="fas fa-spinner hidden animate-spin text-gray-400"></i>
+                    </div>
 
                     <!-- red dot -->
                     <div class="absolute right-2 top-2 hidden">
@@ -563,9 +569,11 @@
                     </div>
                   </button>
                   <button id="checkin_daily_tab2" class="section-content-tab bg-transparent hover:bg-gray-200">
-                    <p>Recent Daily Check-Ins</p>
-                    <p class="text-sm text-gray-500">Today's user daily check-ins</p>
-                    <i class="fas fa-spinner hidden animate-spin text-gray-400"></i>
+                    <p class="mb-6 text-base">Recent Daily Check-Ins</p>
+                    <div class="absolute inset-0 mt-6 content-center">
+                      <p class="text-xs text-gray-500">Today's user daily check-ins</p>
+                      <i class="fas fa-spinner hidden animate-spin text-gray-400"></i>
+                    </div>
 
                     <!-- red dot -->
                     <div class="absolute right-2 top-2 hidden">
@@ -846,9 +854,11 @@
                 <!-- tabs -->
                 <div class="section-content-h2">
                   <button id="billing_tab1" class="section-content-tab bg-gray-200 hover:bg-gray-300">
-                    <p>Recent Complete Transaction Log</p>
-                    <p class="text-sm text-gray-500">Today's total complete transaction</p>
-                    <i class="fas fa-spinner hidden animate-spin text-gray-400"></i>
+                    <p class="mb-6 text-base">Recent Complete Transaction Log</p>
+                    <div class="absolute inset-0 mt-6 content-center">
+                      <p class="text-xs text-gray-500">Today's total complete transaction</p>
+                      <i class="fas fa-spinner hidden animate-spin text-gray-400"></i>
+                    </div>
 
                     <!-- red dot -->
                     <div class="absolute right-2 top-2 hidden">
@@ -859,9 +869,11 @@
                     </div>
                   </button>
                   <button id="billing_tab2" class="section-content-tab bg-transparent hover:bg-gray-200">
-                    <p>All Complete Transactions Log</p>
-                    <p class="text-sm text-gray-500">Total complete transaction</p>
-                    <i class="fas fa-spinner hidden animate-spin text-gray-400"></i>
+                    <p class="mb-6 text-base">All Complete Transactions Log</p>
+                    <div class="absolute inset-0 mt-6 content-center">
+                      <p class="text-xs text-gray-500">Total complete transaction</p>
+                      <i class="fas fa-spinner hidden animate-spin text-gray-400"></i>
+                    </div>
 
                     <!-- red dot -->
                     <div class="absolute right-2 top-2 hidden">
@@ -1111,9 +1123,11 @@
                 <!-- tabs -->
                 <div class="section-content-h2">
                   <button id="data_sync_tab1" class="section-content-tab bg-gray-200 hover:bg-gray-300">
-                    <p>Recent Synced Data Tracker</p>
-                    <p class="text-sm text-gray-500">Today's total synced data log</p>
-                    <i class="fas fa-spinner hidden animate-spin text-gray-400"></i>
+                    <p class="mb-6 text-base">Recent Synced Data Tracker</p>
+                    <div class="absolute inset-0 mt-6 content-center">
+                      <p class="text-xs text-gray-500">Today's total synced data log</p>
+                      <i class="fas fa-spinner hidden animate-spin text-gray-400"></i>
+                    </div>
 
                     <!-- red dot -->
                     <div class="absolute right-2 top-2 hidden">
@@ -1124,9 +1138,11 @@
                     </div>
                   </button>
                   <button id="data_sync_tab2" class="section-content-tab bg-transparent hover:bg-gray-200">
-                    <p>Total Synced Data</p>
-                    <p class="text-sm text-gray-500">All synced data log</p>
-                    <i class="fas fa-spinner hidden animate-spin text-gray-400"></i>
+                    <p class="mb-6 text-base">Total Synced Data</p>
+                    <div class="absolute inset-0 mt-6 content-center">
+                      <p class="text-xs text-gray-500">All synced data log</p>
+                      <i class="fas fa-spinner hidden animate-spin text-gray-400"></i>
+                    </div>
 
                     <!-- red dot -->
                     <div class="absolute right-2 top-2 hidden">
