--- a/src/html/admin/admin_main.html
+++ b/src/html/admin/admin_main.html
@@ -309,7 +309,7 @@
 
     <!-- main js -->
     <script type="module" src="/src/js/admin_main.js"></script>
-    <script type="module" src="/src/js/admin_section.js"></script>
+    <script type="module" src="/src/js/admin_content.js"></script>
     <script type="module" src="/src/js/dashboard/header.js"></script>
     <script type="module" src="/src/js/dashboard/stats.js"></script>
     <script type="module" src="/src/js/dashboard/content.js"></script>
