--- a/src/html/admin/content.html
+++ b/src/html/admin/content.html
@@ -41,7 +41,7 @@
           </button>
         </div>
       </div>
-      <div class="min-h-[422px] p-6"></div>
+      <div class="scrollbar-light min-h-[425px] p-6"></div>
     </div>
   </div>
   <div class="flexbox col-span-1 hidden 2xl:col-span-4">
