--- a/src/html/admin/dashboard_content.html
+++ b/src/html/admin/dashboard_content.html
@@ -1,8 +1,3 @@
-<div id="sectionOne" data-tabIndex="1">
-  <div class="absolute right-2 top-2">
-    <div class="relative h-2 w-2">
-      <div class="full absolute scale-105 animate-ping rounded-full bg-red-500 opacity-75"></div>
-      <div class="absolute h-2 w-2 rounded-full bg-red-500"></div>
-    </div>
-  </div>
+<div data-sectionindex="1" data-tabindex="1">
+  <canvas class="h-[375px]" id="dashboardChart1"></canvas>
 </div>
