--- a/src/html/admin_stats.html
+++ b/src/html/admin_stats.html
@@ -1,6 +1,7 @@
+<!-- do not modify -jest -->
 <div class="grid grid-cols-1 gap-2 lg:gap-4">
   <div
-    id="sectionStats"
+    id="${sectionName}SectionStats"
     data-section="${sectionName}"
     class="section-stats-base border-${mainColor}-500 hidden min-h-[86px] p-3 xl:min-h-[108px] xl:p-4"
   >
