--- a/src/html/admin_header.html
+++ b/src/html/admin_header.html
@@ -1,18 +1,16 @@
-<div class="section-h from-${mainColor}-500 to-${subColor}-500 p-4 2xl:p-8">
+<!-- do not modify -jest -->
+<div class="section-h from-${mainColor}-500 to-${subColor}-500 overflow-hidden p-4 2xl:p-8">
   <div class="section-h2">
     <div class="section-h2-h">
       <img src="/src/images/client_logo.jpg" />
     </div>
-    <div class="flexbox">
+    <div class="flex flex-col">
       <p class="text-lg xl:text-xl 2xl:text-2xl">${title}</p>
       <p class="text-xs text-white/80 xl:text-sm 2xl:text-base">${subtitle}</p>
     </div>
   </div>
   <div class="section-h-c bg-${mainColor}-500">
-    <div
-      id="middleText"
-      class="text-${mainColor}-300 w-[235px] text-center text-sm font-bold xl:text-base 2xl:w-[302px] 2xl:text-lg"
-    >
+    <div class="text-${mainColor}-300 w-[235px] text-center text-sm font-bold xl:text-base 2xl:w-[302px] 2xl:text-lg">
       ${middletext}
     </div>
   </div>
