feat: delegated all admin modules

--- a/src/html/admin_modal.html
+++ b/src/html/admin_modal.html
@@ -34,7 +34,7 @@
             <input type="file" id="input-image-upload" accept="image/*" class="hidden" />
             <button
               type="button"
-              class="absolute right-0 top-0 mx-2 my-1.5 hidden rounded-lg bg-gray-200 px-2 py-1 text-xs font-bold text-gray-500 duration-300 hover:bg-amber-500 hover:text-white 2xl:m-4 2xl:flex"
+              class="absolute right-0 top-0 mx-2 my-1.5 hidden rounded-lg bg-gray-200 px-2 py-1 text-xs font-bold text-gray-500 duration-300 hover:bg-amber-500 hover:text-white 2xl:mx-4 2xl:my-3.5 2xl:flex"
             >
               Upload Photo
             </button>
@@ -44,6 +44,7 @@
             <div class="flex hidden flex-col gap-2 font-medium">
               <label class="text-xs text-gray-600 2xl:text-sm"></label>
               <input
+                id="input-short-0"
                 autocomplete="off"
                 class="rounded-md border-2 border-gray-300 bg-gray-100 px-2 py-1 text-sm duration-300 focus:outline-amber-500 focus:ring-2 focus:ring-amber-200 2xl:px-3 2xl:py-2 2xl:text-base"
                 placeholder="Input"
@@ -55,6 +56,7 @@
         <div class="flex hidden flex-col gap-2 font-medium">
           <label class="text-xs text-gray-600 2xl:text-sm"></label>
           <input
+            id="input-short-3"
             autocomplete="off"
             class="rounded-md border-2 border-gray-300 bg-gray-100 px-2 py-1 text-sm duration-300 focus:outline-amber-500 focus:ring-2 focus:ring-amber-200 2xl:px-3 2xl:py-2 2xl:text-base"
             placeholder="Input"
@@ -99,7 +101,7 @@
           </div>
         </div>
 
-        <div class="flex mt-2 2xl:mt-4  gap-2 2xl:gap-4">
+        <div class="mt-2 flex gap-2 2xl:mt-4 2xl:gap-4">
           <button
             type="button"
             id="modalSubBtn"
